Use event bus for gradle