@@ -1,3 +1,19 @@
+/*
+ *  Copyright 2023 Sonu Kumar
+ *
+ *  Licensed under the Apache License, Version 2.0 (the "License");
+ *  you may not use this file except in compliance with the License.
+ *  You may obtain a copy of the License at
+ *
+ *         https://www.apache.org/licenses/LICENSE-2.0
+ *
+ *   Unless required by applicable law or agreed to in writing, software
+ *   distributed under the License is distributed on an "AS IS" BASIS,
+ *  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ *  See the License for the specific language governing permissions and limitations under the License.
+ *
+ */
+
 package com.github.sonus21.rqueue.core;
 
 import com.github.sonus21.TestBase;
@@ -14,6 +30,7 @@ import org.mockito.MockitoAnnotations;
 import org.springframework.data.redis.connection.DefaultMessage;
 import org.springframework.data.redis.connection.MessageListener;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
@@ -74,7 +91,7 @@ class RedisScheduleTriggerHandlerTest extends TestBase {
     scheduler = new Scheduler();
     redisScheduleTriggerHandler = new RedisScheduleTriggerHandler(log,
         rqueueRedisListenerContainerFactory, rqueueSchedulerConfig,
-        List.of(slowQueue), scheduler,
+        Collections.singletonList(slowQueue), scheduler,
         (e) -> {
           return slowQueueDetail.getScheduledQueueChannelName();
         });
